# http-dl

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  RESTRUCTURE_PLAN.md  pyproject.toml
docs/: clients.md  download.md  exceptions.md  limiting.md  logging.md  models.md
httpdl/: __init__.py  concurrency.py  config.py  core.py  download.py  exceptions.py  limiting.py  limiting_backends.py  metrics.py  models.py  session.py  streaming.py  utils.py
httpdl/clients/: __init__.py  base.py  batch.py  data.py  file.py  queue.py  utils.py
httpdl/limiting/: __init__.py  limiting.py
httpdl/limiting/backends/: __init__.py  base.py  in_memory.py  multiprocessing.py  redis.py
httpdl/models/: __init__.py  config.py  metrics.py  results.py
httpdl/observability/: __init__.py  logging.py  metrics.py
httpdl/session/: manager.py
httpdl/stealth/: stealth.py
tests/: test_concurrency.py  test_data_download.py  test_exceptions.py  test_file_download.py  test_file_streaming.py  test_limiting_backends.py  test_metrics.py  test_rate_limiter.py  test_session.py  test_stealth.py  test_streaming.py
